--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.10.1",
+    "tsparticles": "^2.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
